--- a/package.json
+++ b/package.json
@@ -1,50 +1,71 @@
 {
-	"scripts": {
-		"test": "./node_modules/.bin/aureooms-node-package-test",
-		"build": "./node_modules/.bin/aureooms-node-package-build",
-		"doc": "./node_modules/.bin/groc"
-	},
-	"author": "aureooms",
-	"keywords": [
-		"bricks",
-		"collection",
-		"collections",
-		"count",
-		"counter",
-		"dict",
-		"ender",
-		"hash",
-		"javascript",
-		"js",
-		"list",
-		"heapq",
-		"bisect",
-		"map"
-	],
-	"homepage": "http://aureooms.github.io/js-collections/",
-	"bugs": {
-		"url": "https://github.com/aureooms/js-collections/issues"
-	},
-	"license": "AGPL-3.0",
-	"name": "aureooms-js-collections",
-	"devDependencies": {
-		"aureooms-js-compare": "^1.4.4",
-		"aureooms-js-functools": "^2.0.3",
-		"aureooms-js-itertools": "^3.0.0",
-		"aureooms-js-number": "^3.0.0",
-		"aureooms-js-operator": "^1.0.2",
-		"aureooms-js-sort": "^7.0.0",
-		"aureooms-node-package": "^4.2.5"
-	},
-	"repository": {
-		"url": "https://github.com/aureooms/js-collections.git",
-		"type": "git"
-	},
-	"description": "Collections code bricks for JavaScript",
-	"spm": {
-		"main": "js/dist/collections.js"
-	},
-	"main": "js/dist/collections.js",
-	"dependencies": {},
-	"version": "1.0.0"
+  "name": "aureooms-js-collections",
+  "description": "Collections code bricks for JavaScript",
+  "version": "1.0.0",
+  "author": "Aurélien Ooms <aurelien.ooms@gmail.com>",
+  "ava": {
+    "require": [
+      "babel-polyfill",
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ],
+    "env": {
+      "development": {
+        "sourceMaps": "inline"
+      }
+    }
+  },
+  "bugs": {
+    "url": "https://github.com/aureooms/js-collections/issues"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "aureooms-js-compare": "^1.4.5",
+    "aureooms-js-functools": "^2.0.3",
+    "aureooms-js-itertools": "^3.0.0",
+    "aureooms-js-number": "^3.0.0",
+    "aureooms-js-operator": "^1.0.2",
+    "aureooms-js-sort": "^7.0.0",
+    "ava": "^0.16.0",
+    "babel-cli": "^6.18.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
+    "codeclimate-test-reporter": "^0.4.0",
+    "coveralls": "^2.11.14",
+    "esdoc": "^0.4.8",
+    "nyc": "^8.4.0"
+  },
+  "homepage": "http://aureooms.github.io/js-collections/",
+  "keywords": [
+    "bisect",
+    "bricks",
+    "collection",
+    "collections",
+    "count",
+    "counter",
+    "dict",
+    "ender",
+    "hash",
+    "heapq",
+    "javascript",
+    "js",
+    "list",
+    "map"
+  ],
+  "license": "AGPL-3.0",
+  "main": "lib/index.js",
+  "repository": {
+    "url": "https://github.com/aureooms/js-collections.git",
+    "type": "git"
+  },
+  "scripts": {
+    "build": "babel src -d lib",
+    "cover": "nyc --reporter=lcov npm test",
+    "prepublish": "npm run build",
+    "test": "ava ./test/src"
+  }
 }
