--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "bugs": {
     "url": "https://github.com/aureooms/js-collections/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "aureooms-js-itertools": "^3.1.0"
+  },
   "devDependencies": {
     "aureooms-js-compare": "^1.4.5",
     "aureooms-js-functools": "^2.0.3",
-    "aureooms-js-itertools": "^3.0.0",
+    "aureooms-js-itertools": "^3.1.0",
     "aureooms-js-number": "^3.0.0",
     "aureooms-js-operator": "^1.0.2",
     "aureooms-js-sort": "^7.0.0",
