:unamused: chore(deps-dev): Upgrade tool set.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,16 @@
     "codeclimate-test-reporter": "0.5.1",
     "coveralls": "2.13.3",
     "esdoc": "0.5.2",
-    "nyc": "11.9.0"
+    "nyc": "11.9.0",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.5",
+    "@babel/register": "7.9.0",
+    "esdoc-inject-script-plugin": "1.0.0",
+    "esdoc-inject-style-plugin": "1.0.0",
+    "esdoc-standard-plugin": "1.0.0",
+    "np": "6.2.1"
   },
   "homepage": "http://aureooms.github.io/js-collections/",
   "keywords": [
