:mag: test: Upgrade ava.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "require": [
       "@babel/polyfill",
       "@babel/register"
-    ]
+    ],
+    "files": [
+      "test/src/**/*"
+    ],
+    "timeout": "1m"
   },
   "babel": {
     "presets": [
@@ -38,7 +42,7 @@
     "@aureooms/js-functools": "2.0.3",
     "@aureooms/js-itertools": "3.4.0",
     "@aureooms/js-number": "3.1.0",
-    "ava": "0.25.0",
+    "ava": "3.8.1",
     "babel-cli": "6.26.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-latest": "6.24.1",
@@ -82,7 +86,7 @@
     "build": "rm -rf lib && babel src -d lib",
     "cover": "nyc --reporter=lcov npm test",
     "prepublish": "npm run build",
-    "test": "ava ./test/src",
+    "test": "ava",
     "esdoc": "esdoc"
   }
 }
