:unamused: chore(deps-dev): Upgrade tool set.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,11 @@
     "esdoc-inject-style-plugin": "1.0.0",
     "esdoc-standard-plugin": "1.0.0",
     "np": "7.0.0",
-    "nyc": "15.1.0"
+    "nyc": "15.1.0",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "babel-plugin-unassert": "3.0.1",
+    "babel-preset-power-assert": "3.0.0",
+    "power-assert": "1.6.1"
   },
   "files": [
     "lib"
