--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "esdoc": "esdoc",
     "prepare": "npm run build",
     "release": "np",
-    "test": "ava"
+    "test": "ava",
+    "lint": "true"
   }
 }
