--- a/package.json
+++ b/package.json
@@ -144,5 +144,6 @@
     "lint": "true",
     "dev": "npm run lint -- --fix && npm run cover -- -- -st --fail-fast",
     "travis": "npm run lint && npm run cover"
-  }
+  },
+  "sideEffects": false
 }
