:books: docs: Update GitHub pages links

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
   "files": [
     "lib"
   ],
-  "homepage": "http://aureooms.github.io/js-collections/",
+  "homepage": "http://make-github-pseudonymous-again.github.io/js-collections/",
   "keywords": [
     "collection",
     "collections",
